# open-vote-network

./: .gitignore  Cargo.toml  README.md  commands_for_client
Appendices/: Cost of contract2 secure.xlsx
crypto/: Cargo.toml
crypto/src/: crypto.rs  lib.rs
data/: commit_output.txt  cost_csv_file.csv  energy_csv_file.csv  extract_numbers.py  register_output.txt  testing_election.sh  vote_output.txt
data/parameters/: voteconfig.json
off-chain/: Cargo.toml  register_msg.json
off-chain/src/: crypto.txt  lib.rs  main.rs
rs-merkle/: Cargo.toml
rs-merkle/src/utils/: indices.rs
src/: crypto.rs  lib.rs  old.rs  tests.rs  types.rs  voteconfig.json
src/tests/: test_utils.rs
util/: Cargo.toml
util/src/: lib.rs
voting/: Cargo.toml  commit_output.txt  register_output.txt  testing_election.sh  vote_output.txt
voting/json-parameters/: voteconfig.json
voting/parameters/: init_context.json  voteconfig.json
voting/src/: crypto.rs  init_context.json  lib.rs  tests.rs  types.rs
voting/src/tests/: test_utils.rs
