[package]
name = "open-vote-network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Enable building WASM
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
concordium-std = "2.0.0"
sha2 = "0.9"
rand = "0.8"
curv-kzen = "0.9"
serde = "1.0.136"
bincode = "1.3.3"