[package]
name = "crypto"
version = "0.1.0"
edition = "2018"

# Enable building WASM
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
concordium-std ="2.0"
sha2 = "0.10"
group = { version = "0.11", default-features = false }
k256 = { version = "0.10", default-features = false, features = ["arithmetic"] }