[package]
name = "off-chain"
version = "0.1.0"
edition = "2018"

[dependencies]
sha2 = "0.10"
concordium-std = "3.0"
group = { version = "0.11", default-features = false }
k256 = { version = "0.10", default-features = false, features = ["arithmetic"] }
rand = { version = "0.8" }
serde_json = "1.0"
base58check = "0.1"

rs_merkle = { path = "../rs-merkle" }
util = { path = "../util" }
voting = { path = "../voting" }