[package]
name = "voting"
version = "0.1.0"
edition = "2018"

# Enable building WASM
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
concordium-std = "3.0"
sha2 = "0.10"
group = { version = "0.11", default-features = false }
k256 = { version = "0.10", default-features = false, features = ["arithmetic"] }

util = { path = "../util" }

# Is build along the contract, except in nightly with -Z flag? It needs to be removed whenever the contract needs to be built
[dev-dependencies]
#off-chain = { path = "../off-chain" }

#a94769881128250eac33680cdb6b6c68c29c1dd87e1ff1abe25ddd69ebd5c754
#5067
#